assets/scss/control/_plugin-mode.scss
/* ... */
// date picker
.react-date-picker {
	.react-date-picker__wrapper {
		border-color: #36405a;
		.react-date-picker__inputGroup {
			.react-date-picker__inputGroup__input {
				color: $white;
			}
		}
	}
}

// for tab
.react-tabs__tab-list {
	.react-tabs__tab {
		background-color: #2c3650;
		color: $white;
		&.react-tabs__tab--selected {
			background-color: #252f47;
		}
	}
}
.btl-tab-panel-inner {
	background: #2c3650;
	.short-description {
		background: #252f47;
		color: $light;
	}
	#response {
		color: #fff;
	}
}
.btl-tab-panel-inner .btl-tab-panel-header {
	color: #fff;
}

// form data
.btl-form-group {
	.btl-form-label,
	.link-options__body span {
		color: $light-darken;
	}
	.active-status {
		color: $light;
	}

	.btl-modal-select--full {
		.btl-react-select__control {
			background-color: #36405a !important;
			border-color: #36405a !important;
			.btl-react-select__value-container {
				.btl-react-select__single-value {
					color: $white;
				}
				.btl-react-select__input {
					input {
						color: $white !important;
					}
				}
			}
			&.btl-react-select__control--is-focused {
				background-color: #36405a !important;
			}
			.btl-react-select__placeholder {
				color: $white;
			}
		}
		.btl-react-select__multi-value {
			background: #252f47 !important;
			.btl-react-select__multi-value__label {
				color: $white !important;
			}
			.btl-react-select__multi-value__remove {
				svg {
					color: $white;
				}
				&:hover {
					svg {
						color: red;
					}
				}
			}
		}
		.btl-react-select__indicators {
			.btl-react-select__indicator-separator {
				background-color: #666182;
			}
			.btl-react-select__indicator {
				color: $white;
			}
		}
	}
	.btl-utm-action-btns button,
	> button {
		background-color: rgba(0, 0, 0, 0);
		color: $light;
	}

	.btl-form-field {
		// custom domain
		.server-type-wrapper {
			color: $light;
		}
		.btl-individual-config-blocks {
			.btl-instruction-block-wrapper,
			code {
				background-color: #36405a;
				border-color: #6e7178;
				color: #fff;
			}

			.btl-code-block-wrapper {
				color: $light;
				.copy-btn {
					svg g {
						stroke: $light;
					}
					.dashicons-yes {
						color: $light;
					}
				}
			}
		}
	}

	.link-options__body {
		input[type='text'] {
			background-color: #36405a;
			border-color: $secondary-darken;
			color: $white;
		}
		.button.button-secondary {
			background-color: #36405a;
			border-color: $secondary-darken;
			color: $white;
		}
	}
}
.btl-checkbox-field {
	.text {
		color: $white;
	}
	.btl-check:checked + .text:before {
		color: lighten($success, 10%);
	}
	.btl-check:disabled + .text:before {
		background: #647397;
		color: #647397;
		box-shadow: inset 0 2px 4px rgb(255 255 255 / 4%);
		cursor: initial;
	}
}
.btl-radio-group .btl-radio input + span {
	color: $secondary-lighten;
}
.btl-radio-group .btl-radio input:checked + span {
	color: $white;
}
.btl-file-chooser label {
	color: $white;
}
.btl-file-chooser input {
	color: $white;
}
.btl-tooltip {
	span.dashicons.dashicons-info-outline {
		color: #818caa;
	}
}
/* ... */

